--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <main>
         <section class="container sobre">
-            <h1>SOBRE MIM</h1>
+            <h1>Sobre mim</h1>
             <div class="content">
                 <div class="text">
                     <span>
@@ -56,7 +56,7 @@
         </section>
 
         <section class="container projetos">
-            <h1>PROJETOS</h1>
+            <h1>Projetos</h1>
             <div class="content">
                 <div class="text">
                     <h1>Em breve</h1>
@@ -70,7 +70,7 @@
         </section>
 
         <section class="container contato">
-            <h1>CONTATO</h1>
+            <h1>Contato</h1>
             <div class="content">
                 <div class="text">
                     <h1>Em breve</h1>
