ajustes no layout

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>Olá! Sou desenvolvedor FULLSTACK JÚNIOR, formado pela DRIVEN EDUCATION e estou a procura de novos
                         desafios!</p>
                 </div>
-                <div class="imagem">
+                <div class="perfil">
                     <img src="./imgs/WhatsApp Image 2022-07-07 at 13.42.57.jpeg" alt="">
                 </div>
             </div>
@@ -58,13 +58,79 @@
         <section class="container projetos">
             <h1>Projetos</h1>
             <div class="content">
-                <div class="text">
-                    <h1>Em breve</h1>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consectetur quibusdam quas. Qui
-                        quis quisquam aspernatur. Alias odio minima deleniti quas pariatur, nesciunt nulla praesentium
-                        dolor blanditiis repellendus, voluptate laboriosam.
-                    </p>
+                <div class="left">
+                    <div class="projeto-box">
+                        <span class="texto">
+                            <h1>MyWallet</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                tempore quasi
+                            </p>
+                        </span>
+                        <span class="imagem">
+                            <img src="./imgs/mywallet.png" alt="">
+                        </span>
+                        <div>
+                            asdasd3543a54d
+                        </div>
+                    </div>
+                    <div class="projeto-box">
+                        <span class="texto">
+                            <h1>MyWallet</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                tempore quasi
+                            </p>
+                        </span>
+                        <span class="imagem">
+                            <img src="./imgs/mywallet.png" alt="">
+                        </span>
+                        <div>
+                            asdasd3543a54d
+                        </div>
+                    </div>
+                    <div class="projeto-box">
+                        <span class="texto">
+                            <h1>MyWallet</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                tempore quasi
+                            </p>
+                        </span>
+                        <span class="imagem">
+                            <img src="./imgs/mywallet.png" alt="">
+                        </span>
+                        <div>
+                            asdasd3543a54d
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="projeto-box">
+                        <span class="texto">
+                            <h1>MyWallet</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                tempore quasi
+                            </p>
+                        </span>
+                        <span class="imagem">
+                            <img src="./imgs/mywallet.png" alt="">
+                        </span>
+                        <div>
+                            asdasd3543a54d
+                        </div>
+                    </div>
+                    <div class="projeto-box">
+                        <span class="texto">
+                            <h1>MyWallet</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                tempore quasi
+                            </p>
+                        </span>
+                        <span class="imagem">
+                            <img src="./imgs/mywallet.png" alt="">
+                        </span>
+                        <div>
+                            asdasd3543a54d
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
