--- a/index.html
+++ b/index.html
@@ -60,43 +60,50 @@
             <div class="content">
                 <div class="left">
                     <div class="projeto-box">
-                        <span class="texto">
-                            <h1>MyWallet</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                tempore quasi
-                            </p>
-                        </span>
-                        <span class="imagem">
-                            <img src="./imgs/mywallet.png" alt="">
-                        </span>
+                        <div class="principal">
+                            <span class="texto">
+                                <h1>MyWallet</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                    tempore quasi
+                                </p>
+                            </span>
+                            <span class="imagem">
+                                <img src="./imgs/mywallet.png" alt="">
+                            </span>
+                        </div>
+                        <div class="btns">
+                            <button>Ver código</button>
+                            <button>Ver o projeto</button>
+                        </div>
+                    </div>
+                    <div class="projeto-box">
+                        <div class="principal">
+                            <span class="texto">
+                                <h1>MyWallet</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                    tempore quasi
+                                </p>
+                            </span>
+                            <span class="imagem">
+                                <img src="./imgs/mywallet.png" alt="">
+                            </span>
+                        </div>
                         <div>
                             asdasd3543a54d
                         </div>
                     </div>
                     <div class="projeto-box">
-                        <span class="texto">
-                            <h1>MyWallet</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                tempore quasi
-                            </p>
-                        </span>
-                        <span class="imagem">
-                            <img src="./imgs/mywallet.png" alt="">
-                        </span>
-                        <div>
-                            asdasd3543a54d
+                        <div class="principal">
+                            <span class="texto">
+                                <h1>MyWallet</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                    tempore quasi
+                                </p>
+                            </span>
+                            <span class="imagem">
+                                <img src="./imgs/mywallet.png" alt="">
+                            </span>
                         </div>
-                    </div>
-                    <div class="projeto-box">
-                        <span class="texto">
-                            <h1>MyWallet</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                tempore quasi
-                            </p>
-                        </span>
-                        <span class="imagem">
-                            <img src="./imgs/mywallet.png" alt="">
-                        </span>
                         <div>
                             asdasd3543a54d
                         </div>
@@ -104,29 +111,33 @@
                 </div>
                 <div class="right">
                     <div class="projeto-box">
-                        <span class="texto">
-                            <h1>MyWallet</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                tempore quasi
-                            </p>
-                        </span>
-                        <span class="imagem">
-                            <img src="./imgs/mywallet.png" alt="">
-                        </span>
+                        <div class="principal">
+                            <span class="texto">
+                                <h1>MyWallet</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                    tempore quasi
+                                </p>
+                            </span>
+                            <span class="imagem">
+                                <img src="./imgs/mywallet.png" alt="">
+                            </span>
+                        </div>
                         <div>
                             asdasd3543a54d
                         </div>
                     </div>
                     <div class="projeto-box">
-                        <span class="texto">
-                            <h1>MyWallet</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                tempore quasi
-                            </p>
-                        </span>
-                        <span class="imagem">
-                            <img src="./imgs/mywallet.png" alt="">
-                        </span>
+                        <div class="principal">
+                            <span class="texto">
+                                <h1>MyWallet</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
+                                    tempore quasi
+                                </p>
+                            </span>
+                            <span class="imagem">
+                                <img src="./imgs/mywallet.png" alt="">
+                            </span>
+                        </div>
                         <div>
                             asdasd3543a54d
                         </div>
@@ -200,7 +211,7 @@
             document.querySelector(".contato").scrollIntoView();
         })
         up.addEventListener("click", () => {
-            document.querySelector(".top").scrollIntoView();
+            window.scrollTo(0,0);
         })
     </script>
 </body>
