--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                     <i class="fa-solid fa-database"></i>
                     <i class="fa-brands fa-npm"></i>
                     <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-docker"></i>
+                    <i class="fa-brands fa-angular"></i>
+                    <i class="fa-brands fa-linux"></i>
+                    <i class="fa-solid fa-rectangle-terminal"></i>
                 </div>
 
         </section>
@@ -211,7 +215,7 @@
             document.querySelector(".contato").scrollIntoView();
         })
         up.addEventListener("click", () => {
-            window.scrollTo(0,0);
+            window.scrollTo(0, 0);
         })
     </script>
 </body>
