fix: background-color of project-box

--- a/index.html
+++ b/index.html
@@ -1,223 +1,156 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marcus - portifólio</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body class="light">
+  <body class="light">
     <div class="top">
-        <header>I'm, Marcus Vinícius</header>
-        <div class="top-right">
-            <nav>
-                <h3 id="projetos">PROJETOS |</h3>
-                <h3 id="sobre"> SOBRE |</h3>
-                <h3 id="contato"> CONTATO |</h3>
-            </nav>
-            <label class="switch" id="switch">
-                <input type="checkbox">
-                <span class="slider round"></span>
-            </label>
-        </div>
+      <header>I'm, Marcus Vinícius</header>
+      <div class="top-right">
+        <nav>
+          <h3 id="projetos">PROJECTS |</h3>
+          <h3 id="sobre">ABOUT |</h3>
+          <h3 id="contato">CONTACT |</h3>
+        </nav>
+        <label class="switch" id="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </div>
     </div>
     <main>
-        <section class="container sobre">
-            <h1>Sobre mim</h1>
-            <div class="content">
-                <div class="text">
-                    <span>
-                        <h1>DESENVOLVEDOR</h1>
-                        <h1>FULLSTACK</h1>
-                    </span>
-                    <p>Olá! Sou desenvolvedor FULLSTACK JÚNIOR, formado pela DRIVEN EDUCATION e estou a procura de novos
-                        desafios!</p>
-                </div>
-                <div class="perfil">
-                    <img src="./imgs/WhatsApp Image 2022-07-07 at 13.42.57.jpeg" alt="">
-                </div>
-            </div>
-            <h2 class="tecnologias-text">Tecnologias que eu utilizo: </h1>
-                <div class="tecnologias">
-                    <i class="fa-brands fa-html5"></i>
-                    <i class="fa-brands fa-css3-alt"></i>
-                    <i class="fa-brands fa-js"></i>
-                    <i class="fa-brands fa-node"></i>
-                    <i class="fa-brands fa-react"></i>
-                    <i class="fa-solid fa-database"></i>
-                    <i class="fa-brands fa-npm"></i>
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-docker"></i>
-                    <i class="fa-brands fa-angular"></i>
-                    <i class="fa-brands fa-linux"></i>
-                    <i class="fa-solid fa-rectangle-terminal"></i>
-                </div>
-
-        </section>
-
-        <section class="container projetos">
-            <h1>Projetos</h1>
-            <div class="content">
-                <div class="left">
-                    <div class="projeto-box">
-                        <div class="principal">
-                            <span class="texto">
-                                <h1>MyWallet</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                    tempore quasi
-                                </p>
-                            </span>
-                            <span class="imagem">
-                                <img src="./imgs/mywallet.png" alt="">
-                            </span>
-                        </div>
-                        <div class="btns">
-                            <button>Ver código</button>
-                            <button>Ver o projeto</button>
-                        </div>
-                    </div>
-                    <div class="projeto-box">
-                        <div class="principal">
-                            <span class="texto">
-                                <h1>MyWallet</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                    tempore quasi
-                                </p>
-                            </span>
-                            <span class="imagem">
-                                <img src="./imgs/mywallet.png" alt="">
-                            </span>
-                        </div>
-                        <div>
-                            asdasd3543a54d
-                        </div>
-                    </div>
-                    <div class="projeto-box">
-                        <div class="principal">
-                            <span class="texto">
-                                <h1>MyWallet</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                    tempore quasi
-                                </p>
-                            </span>
-                            <span class="imagem">
-                                <img src="./imgs/mywallet.png" alt="">
-                            </span>
-                        </div>
-                        <div>
-                            asdasd3543a54d
-                        </div>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="projeto-box">
-                        <div class="principal">
-                            <span class="texto">
-                                <h1>MyWallet</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                    tempore quasi
-                                </p>
-                            </span>
-                            <span class="imagem">
-                                <img src="./imgs/mywallet.png" alt="">
-                            </span>
-                        </div>
-                        <div>
-                            asdasd3543a54d
-                        </div>
-                    </div>
-                    <div class="projeto-box">
-                        <div class="principal">
-                            <span class="texto">
-                                <h1>MyWallet</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusantium
-                                    tempore quasi
-                                </p>
-                            </span>
-                            <span class="imagem">
-                                <img src="./imgs/mywallet.png" alt="">
-                            </span>
-                        </div>
-                        <div>
-                            asdasd3543a54d
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="container contato">
-            <h1>Contato</h1>
-            <div class="content">
-                <div class="text">
-                    <h1>Em breve</h1>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consectetur quibusdam quas. Qui
-                        quis quisquam aspernatur. Alias odio minima deleniti quas pariatur, nesciunt nulla praesentium
-                        dolor blanditiis repellendus, voluptate laboriosam.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <article>
-            <h3>
-                Ligth / Dark
-            </h3>
+      <section class="container sobre">
+        <h1>About me</h1>
+        <div class="content">
+          <div class="text">
+            <span>
+              <h1>DEVELOPER</h1>
+              <h1>FULLSTACK</h1>
+            </span>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quia placeat expedita consequuntur in
-                molestias accusantium, minima doloremque aperiam hic veniam nam neque aliquam porro reprehenderit illum
-                ex mollitia voluptates.
+              Hello! I am a JUNIOR FULLSTACK developer, graduated in mathematics
+              with an intense background in software development by DRIVEN
+              EDUCATION and I am looking for new challenges!
             </p>
-        </article>
+          </div>
+          <div class="perfil">
+            <img
+              src="./imgs/WhatsApp Image 2022-07-07 at 13.42.57.jpeg"
+              alt=""
+            />
+          </div>
+        </div>
+        <h2 class="tecnologias-text">Technologies that I use:</h2>
+        <div class="tecnologias">
+          <i class="fa-brands fa-html5"></i>
+          <i class="fa-brands fa-css3-alt"></i>
+          <i class="fa-brands fa-js"></i>
+          <i class="fa-brands fa-node"></i>
+          <i class="fa-brands fa-react"></i>
+          <i class="fa-solid fa-database"></i>
+          <i class="fa-brands fa-npm"></i>
+          <i class="fa-brands fa-github"></i>
+          <i class="fa-brands fa-docker"></i>
+          <i class="fa-brands fa-vuejs"></i>
+          <i class="fa-brands fa-linux"></i>
+        </div>
+        <h2
+          style="width: 100%; padding: 10px 10px 15px 15px; font-size: 1.5rem"
+          class="others"
+        >
+          And some others like: Ruby on Rails, MySQL, Kubernets
+        </h2>
+      </section>
+
+      <section class="container projetos">
+        <h1>Projetcs</h1>
+        <div class="content">
+          <div class="text">
+            <h1>Comming soon...</h1>
+          </div>
+        </div>
+      </section>
+
+      <section class="container contato">
+        <h1>Contact</h1>
+        <div class="content">
+          <div class="text">
+            <div>
+              <a href="https://github.com/marcus-souza-soares" target="_blank">
+                <i class="fa-brands fa-github brightness_hover pointer"></i>
+              </a>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/marcus-vinicius-de-souza-soares"
+              >
+                <i class="fa-brands fa-linkedin brightness_hover pointer"></i>
+              </a>
+              <a href="https://www.instagram.com/marcus_soares_devfs" target="_blank">
+                <i class="fa-brands fa-instagram brightness_hover pointer"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-        <div>
-            <ion-icon id="up" name="chevron-up-circle-outline"></ion-icon>
-        </div>
+      <div>
+        <ion-icon id="up" name="chevron-up-circle-outline"></ion-icon>
+      </div>
     </footer>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="https://kit.fontawesome.com/01ddfdab69.js" crossorigin="anonymous"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/01ddfdab69.js"
+      crossorigin="anonymous"
+    ></script>
     <script>
-        const body = document.querySelector("body");
-        const switchBtn = document.getElementById("switch");
-        const root = document.querySelector(":root");
-        const imgs_tecnologias = document.querySelectorAll(".tecnologias > i")
+      const body = document.querySelector("body");
+      const switchBtn = document.getElementById("switch");
+      const root = document.querySelector(":root");
+      const imgs_tecnologias = document.querySelectorAll(".tecnologias > i");
 
-        // Change theme
-        switchBtn.addEventListener("change", () => {
-            toggleRootClass();
+      // Change theme
+      switchBtn.addEventListener("change", () => {
+        toggleRootClass();
+      });
+
+      function toggleRootClass() {
+        document.querySelector("body").classList.toggle("dark");
+        imgs_tecnologias.forEach((e) => {
+          e.classList.toggle("dark");
         });
+      }
+      const sobre = document.getElementById("sobre");
+      const projetos = document.getElementById("projetos");
+      const contato = document.getElementById("contato");
+      const info = document.getElementById("info");
+      const up = document.getElementById("up");
 
-        function toggleRootClass() {
-            document.querySelector("body").classList.toggle("dark");
-            imgs_tecnologias.forEach(e => {
-                e.classList.toggle("dark")
-            })
-        }
-        const sobre = document.getElementById("sobre");
-        const projetos = document.getElementById("projetos");
-        const contato = document.getElementById("contato");
-        const info = document.getElementById("info");
-        const up = document.getElementById("up")
-
-        sobre.addEventListener("click", () => {
-            document.querySelector(".sobre").scrollIntoView();
-        })
-        projetos.addEventListener("click", () => {
-            document.querySelector(".projetos").scrollIntoView();
-        })
-        contato.addEventListener("click", () => {
-            document.querySelector(".contato").scrollIntoView();
-        })
-        up.addEventListener("click", () => {
-            window.scrollTo(0, 0);
-        })
+      sobre.addEventListener("click", () => {
+        document.querySelector(".sobre").scrollIntoView();
+      });
+      projetos.addEventListener("click", () => {
+        document.querySelector(".projetos").scrollIntoView();
+      });
+      contato.addEventListener("click", () => {
+        document.querySelector(".contato").scrollIntoView();
+      });
+      up.addEventListener("click", () => {
+        window.scrollTo(0, 0);
+      });
     </script>
-</body>
-
+  </body>
 </html>
